// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal renders correctly 1`] = `
<div>
  <div
    class="modal show"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="modal-dialog"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-body"
        >
          Modal
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal renders with a certain size correctly 1`] = `
<div>
  <div
    class="modal show"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-lg"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-body"
        >
          Large Modal
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal renders with a footer correctly 1`] = `
<div>
  <div
    class="modal show"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="modal-dialog"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-body"
        >
          Modal with Footer
        </div>
        <div
          class="modal-footer"
        >
          footer
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal renders with a header correctly 1`] = `
<div>
  <div
    class="modal show"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="modal-dialog"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <div
            class="modal-title"
          >
            header
          </div>
          <button
            aria-label="Close"
            class="close"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-times"
            >
              <use
                xlink:href="#times"
              />
            </svg>
          </button>
        </div>
        <div
          class="modal-body"
        >
          Modal with Header
        </div>
      </div>
    </div>
  </div>
</div>
`;
